Bug 119052 - Two "Edit Style" buttons on the "Character Style" dialog
Summary: Two "Edit Style" buttons on the "Character Style" dialog
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.3 all versions
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:6.2.0 target:6.1.1
Keywords:
: 112870 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-08-01 22:06 UTC by Octavio Alvarez
Modified: 2018-10-18 08:34 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Octavio Alvarez 2018-08-01 22:06:47 UTC
Description:
Two "Edit Style" buttons on the "Character Style" dialog

Steps to Reproduce:
1. New Writer document
2. On the Styles pane, Character styles, right-click on Default, New...
3. Go to the Organizer tab

Actual Results:
Two Edit Style buttons. The first one doesn't do anything.

Expected Results:
Only one Edit Style button.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Octavio Alvarez 2018-08-01 22:07:00 UTC
Version: 6.1.0.2 (x64)
Build ID: b3972dcf1284967612d5ee04fea9d15bcf0cc106
CPU threads: 4; OS: Windows 10.0; UI render: default; 
Locale: en-US (en_US); Calc: group threaded
Comment 2 Xisco Faulí 2018-08-01 22:11:09 UTC
The first one is for the 'Next Style' and the second one for the 'Inherit from' Style. if you change the first style to something else, the button will get enabled.
This is the expected behaviour.
Closing as RESOLVED NOTABUG
Comment 3 Octavio Alvarez 2018-08-01 23:24:38 UTC
Character styles do NOT have a "Next Style". Thus, the button is just standing alone by itself. Setting back to UNCONFIRMED.
Comment 4 Roman Kuznetsov 2018-08-02 11:10:00 UTC Comment hidden (obsolete)
Comment 5 Roman Kuznetsov 2018-08-02 11:12:36 UTC
(In reply to kompilainenn from comment #4)
> (In reply to Octavio Alvarez from comment #0)
> > Description:
> > Two "Edit Style" buttons on the "Character Style" dialog
> > 
> > Steps to Reproduce:
> > 1. New Writer document
> > 2. On the Styles pane, Character styles, right-click on Default, New...
> > 3. Go to the Organizer tab
> > 
> > Actual Results:
> > Two Edit Style buttons. The first one doesn't do anything.
> 
> The first one doesn't do anything because you don't change style that need
> edit! By default for "Next style" selected "Untitled 1". It is that style,
> that you edit NOW. You already have opened dialogue for "Untitled 1"!
> Try select any another style from drop-down list and then push button "Edit
> Style". It will open new window for editing selected style!
> 
> Xisco is right. It is NOTABUG.

ah, i'm very sorry. Character style dialogue really has excess button "Edit style" that doesn't work.

Status->NEW
Comment 6 Xisco Faulí 2018-08-02 11:43:06 UTC
Patch in gerrit: https://gerrit.libreoffice.org/#/c/58472/
Comment 7 Roman Kuznetsov 2018-08-02 18:56:36 UTC
Xisco: two buttons "Edit Style" there are in dialogues Numbering style, Frame style,  also
Comment 8 Xisco Faulí 2018-08-03 10:25:32 UTC
(In reply to kompilainenn from comment #7)
> Xisco: two buttons "Edit Style" there are in dialogues Numbering style,
> Frame style,  also

yep, with my patch they are gone too...
Comment 9 Commit Notification 2018-08-07 15:21:36 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8e7d6bd5095404337c6e6dab1b9a20f69765ef29

tdf#119052: hide edit style button in character style

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2018-08-16 15:49:26 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=62191a46cd8ceb73145ede57667304b159f5461e&h=libreoffice-6-1

tdf#119052: hide edit style button in character style

It will be available in 6.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Roman Kuznetsov 2018-08-26 10:41:36 UTC
verified in LO 6.1.1.1 on Windows
Comment 12 Roman Kuznetsov 2018-10-18 08:34:01 UTC
*** Bug 112870 has been marked as a duplicate of this bug. ***