tdf#119052: hide edit style button in character style

Change-Id: I8ec82865b990ff19ead819c990f442edd7423d66
Reviewed-on: https://gerrit.libreoffice.org/58472
Tested-by: Jenkins
Reviewed-by: Xisco Faulí <xiscofauli@libreoffice.org>
(cherry picked from commit 8e7d6bd5095404337c6e6dab1b9a20f69765ef29)
Reviewed-on: https://gerrit.libreoffice.org/58694
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>